--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^16.11.6",
     "pureimage": "^0.3.5",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "zzfx": "^1.1.8"
   }
-
 }
